Attempt to fix alignment issues with h1

--- a/css/style.scss
+++ b/css/style.scss
@@ -82,7 +82,7 @@ a {
 #content {
     display: flex;
     min-height: 70%;
-    margin-top: 16.4vh;
+    margin-top: 130px;
     max-width: 1100px;
     padding: 0 40px;
     position: relative;
@@ -91,10 +91,10 @@ a {
 
 h1 {
     font-family: Futura;
-    font-variant: small-caps;
+    font-size: 1.3rem;
     font-weight: bold;
     margin: 0;
-    text-transform: lowercase;
+    text-transform: uppercase;
 }
 
 nav {
@@ -108,7 +108,6 @@ nav {
     padding-right: 55px;
     position: fixed;
     text-align: right;
-    margin-top: 20px;
 
     input {
         border-radius: 0;
@@ -171,6 +170,9 @@ nav {
 .page {
     display: none;
     padding-bottom: 70px;
+    > p:first-child {
+        margin-top: 0;
+    }
 }
 
 #page-content {
@@ -312,7 +314,7 @@ nav {
 
 #featured-posts {
     display: grid;
-    grid-template-columns: repeat(3, minmax(auto, 200px));
+    grid-template-columns: repeat(3, minmax(auto, 160px));
     grid-auto-flow: column;
     width: 100%;
 
@@ -421,7 +423,7 @@ $nav-height: 55px;
         box-sizing: border-box;
         margin-top: 70px;
         margin-left: 0;
-        padding: 0 30px 30px 30px;
+        padding: 0 30px 60px 30px;
     }
 
     #contact-page img {
@@ -430,6 +432,7 @@ $nav-height: 55px;
     }
 
     .page {
+        height: 100%;
         padding-bottom: 0;
     }
 
